Add Play apps default JVM setttings env [#159104425]