@@ -5,7 +5,7 @@ FROM openjdk:8u171-jre-slim
 
 ENV PROMETHEUS_JMX_AGENT_FILE "/app/jmx/jmx_prometheus_javaagent-0.3.1.jar"
 
-# JVM Settings used by a majority of the apps
+# JVM Settings for JAR apps used by a majority of the apps
 ENV CL_DEFAULT_JVM -javaagent:${PROMETHEUS_JMX_AGENT_FILE}=9001:/app/jmx/config.yaml \
  -XX:+UnlockExperimentalVMOptions \
  -XX:+UseCGroupMemoryLimitForHeap \
@@ -13,6 +13,15 @@ ENV CL_DEFAULT_JVM -javaagent:${PROMETHEUS_JMX_AGENT_FILE}=9001:/app/jmx/config.
  -XshowSettings:vm \
  -XX:+ExitOnOutOfMemoryError \
  -server
+
+# JVM Settings for Play apps used by a majority of the apps
+ENV CL_DEFAULT_PLAY -J-javaagent:${PROMETHEUS_JMX_AGENT_FILE}=9001:/app/jmx/config.yaml \
+ -J-XX:+UnlockExperimentalVMOptions \
+ -J-XX:+UseCGroupMemoryLimitForHeap \
+ -J-XX:MaxRAMFraction=2 \
+ -J-XshowSettings:vm \
+ -J-XX:+ExitOnOutOfMemoryError \
+ -J-server
 
 ENV TZ=America/New_York
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone && \
